force-app/main/default/objects/SCC_Resolution_Tracker__c/SCC_Resolution_Tracker__c.object-meta.xml
<CustomObject>
    <label>Resolution Tracker</label>
    <nameField>
        <displayFormat>RTN-{000000000}</displayFormat>
        <label>Resolution Tracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resolution Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>