force-app/main/default/objects/SCC_Resolution_Tracker__c/fields/SCC_Case__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Resolution Tracker</relationshipLabel>
    <relationshipName>Resolution_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>