force-app/main/default/objects/SCC_Resolution_Tracker__c/fields/SCC_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resolution_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>