force-app/main/default/objects/SCC_Resolution_Tracker__c/fields/SCC_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>