force-app/main/default/objects/SCC_Resolution_Tracker__c/fields/SCC_Completed__c.field-meta.xml
<CustomField>
    <fullName>SCC_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>