force-app/main/default/objects/SCC_Resolution_Tracker__c/fields/SCC_Duration_in_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>SCC_Duration_in_Business_Hours__c</fullName>
    <label>Duration in Business Hours</label>
    <type>Time</type>
</CustomField>