force-app/main/default/objects/SCC_Resolution_Tracker__c/fields/SCC_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SCC_End_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>