force-app/main/default/objects/SCC_Resolution_Tracker__c/fields/SCC_Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>SCC_Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>