force-app/main/default/objects/SCC_Resolution_Tracker__c/fields/SCC_Violated__c.field-meta.xml
<CustomField>
    <fullName>SCC_Violated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Violated</label>
    <type>Checkbox</type>
</CustomField>